[gd_scene format=3 uid="uid://cbkasc4mo4kak"]

[ext_resource type="Script" uid="uid://y3rfrg1egedm" path="res://Scripts/player.gd" id="1_v0iea"]

[node name="Player" type="Node2D" unique_id=1515088060]
script = ExtResource("1_v0iea")

[node name="Camera2D" type="Camera2D" parent="." unique_id=126032930]

[connection signal="addResources" from="." to="." method="_on_add_resources"]
[connection signal="setResources" from="." to="." method="_on_set_resources"]
